<?xml version="1.0" encoding="utf-8"?>
<ScrollView  xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/android_layout_bg">
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/android_layout_bg" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/android_layout_bg" >
        <RelativeLayout
            android:id="@+id/personal_top_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:background="#0233dd">
            <TextView
                android:id="@+id/editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="我的爱车"
                android:textColor="#fff"
                android:textSize="18sp" />


        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/android_layout_dl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/personal_top_layout">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="320dp"
                android:layout_alignParentTop="true"
                android:layout_marginTop="-100dp"
                android:background="@drawable/my_personal_not_login_bg"/>


        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/android_layout_khfw"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/android_layout_dl">
            <TextView
                android:id="@+id/yhzx"
                style="@style/PersonalCenterText"
                android:text="@string/personal_customer_service" />

            <LinearLayout style="@style/PersonalMainLayoutStyle"
                android:layout_below="@id/yhzx">

                <RelativeLayout
                    style="@style/PersonalTopStyle"
                    android:layout_marginBottom="10dp" >

                    <ImageView
                        android:id="@+id/personal_icon_09"
                        style="@style/PersonalIconStyle"
                        android:src="@drawable/android_my_jd_return_repair" />

                    <TextView
                        android:id="@+id/weixiu"
                        android:onClick="weixiuClick"
                        style="@style/PersonalTextStyle"
                        android:layout_toRightOf="@id/personal_icon_09"
                        android:text="@string/personal_return_back" />

                    <ImageView
                        style="@style/PersonalRightIconStyle"
                        android:src="@drawable/android_list_idex" />
                </RelativeLayout>

                <View style="@style/PersonalLine" />

                <RelativeLayout
                    style="@style/PersonalBottomStyle"
                    android:layout_marginBottom="10dp" >

                    <ImageView
                        android:id="@+id/personal_icon_10"
                        style="@style/PersonalIconStyle"
                        android:src="@drawable/android_my_jd_online_service" />

                    <TextView
                        android:id="@+id/personal_service"
                        android:onClick="serviceClick"
                        style="@style/PersonalTextStyle"
                        android:layout_toRightOf="@id/personal_icon_10"
                        android:text="@string/personal_infomation_service" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_toRightOf="@id/personal_service"
                        />

                    <ImageView
                        style="@style/PersonalRightIconStyle"
                        android:src="@drawable/android_list_idex" />
                </RelativeLayout>

            </LinearLayout>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/android_layout_khfw">
            <Button
                android:id="@+id/personal_exit"
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="14dp"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:layout_marginTop="14dp"
                android:background="@drawable/android_title_bg"
                android:gravity="center"
                android:padding="4dp"
                android:text="退出登录"
                android:textColor="#fff"
                android:textSize="18sp" />

        </RelativeLayout>

    </RelativeLayout>

</RelativeLayout>
</ScrollView>