<?xml version="1.0" encoding="utf-8"?>
<ScrollView  xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    <FrameLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">
            <include layout="@layout/toolbar"/>
        </LinearLayout>

        <include layout="@layout/lunbo"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:layout_marginTop="245dp"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/index_product_images_indicator"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:orientation="horizontal" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#ddd">

                <FrameLayout
                    android:id="@+id/index_miaosha_image_layout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_margin="5dp">
                    <android.support.v7.widget.AppCompatCheckedTextView
                        android:id="@+id/home_message"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/carnews" />

                </FrameLayout>

                <ImageView
                    android:id="@+id/index_list_arrow"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_margin="5dp"
                    android:src="@drawable/android_list_idex" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toLeftOf="@id/index_list_arrow"
                    android:text="@string/index_slogan"
                    android:textColor="@color/black"
                    android:textSize="@dimen/medium_text_size"
                    android:textStyle="bold" />
            </RelativeLayout>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/filter_spider_line" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:baselineAligned="false"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageButton
                            android:id="@+id/index_promotion_btn"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"

                            android:src="@drawable/shortcuts_icon_promotion" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/index_promotion"
                            android:textColor="@color/black"
                            android:textSize="@dimen/micro_text_size" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageButton
                            android:id="@+id/index_recharge_btn"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"

                            android:src="@drawable/shortcuts_icon_recharge" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/index_recharge"
                            android:textColor="@color/black"
                            android:textSize="@dimen/micro_text_size" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageButton
                            android:id="@+id/index_groupbuy_btn"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/shortcuts_icon_groupbuy" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/index_group_buy"
                            android:textColor="@color/black"
                            android:textSize="@dimen/micro_text_size" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageButton
                            android:id="@+id/index_lottery_btn"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/shortcuts_icon_lottery" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/index_lottery"
                            android:textColor="@color/black"
                            android:textSize="@dimen/micro_text_size" />
                    </LinearLayout>
                </LinearLayout>

                <!--<LinearLayout-->
                    <!--android:layout_width="match_parent"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:layout_marginBottom="10dp"-->
                    <!--android:layout_marginTop="5dp"-->
                    <!--android:baselineAligned="false"-->
                    <!--android:gravity="center"-->
                    <!--android:orientation="horizontal">-->

                    <!--<LinearLayout-->
                        <!--android:layout_width="0dp"-->
                        <!--android:layout_height="wrap_content"-->
                        <!--android:layout_weight="1"-->
                        <!--android:gravity="center"-->
                        <!--android:orientation="vertical">-->

                        <!--<ImageButton-->
                            <!--android:id="@+id/index_order_btn"-->
                            <!--android:layout_width="wrap_content"-->
                            <!--android:layout_height="wrap_content"-->
                            <!--android:src="@drawable/shortcuts_icon_order" />-->

                        <!--<TextView-->
                            <!--android:layout_width="wrap_content"-->
                            <!--android:layout_height="wrap_content"-->
                            <!--android:text="@string/index_order"-->
                            <!--android:textColor="@color/black"-->
                            <!--android:textSize="@dimen/micro_text_size" />-->
                    <!--</LinearLayout>-->

                    <!--<LinearLayout-->
                        <!--android:layout_width="0dp"-->
                        <!--android:layout_height="wrap_content"-->
                        <!--android:layout_weight="1"-->
                        <!--android:gravity="center"-->
                        <!--android:orientation="vertical">-->

                        <!--<ImageButton-->
                            <!--android:id="@+id/index_history_btn"-->
                            <!--android:layout_width="wrap_content"-->
                            <!--android:layout_height="wrap_content"-->
                            <!--android:src="@drawable/shortcuts_icon_history" />-->

                        <!--<TextView-->
                            <!--android:layout_width="wrap_content"-->
                            <!--android:layout_height="wrap_content"-->
                            <!--android:text="@string/index_history"-->
                            <!--android:textColor="@color/black"-->
                            <!--android:textSize="@dimen/micro_text_size" />-->
                    <!--</LinearLayout>-->


                    <!--<LinearLayout-->
                        <!--android:layout_width="0dp"-->
                        <!--android:layout_height="wrap_content"-->
                        <!--android:layout_weight="1"-->
                        <!--android:gravity="center"-->
                        <!--android:orientation="vertical">-->

                        <!--<ImageButton-->
                            <!--android:id="@+id/index_shake"-->
                            <!--android:layout_width="wrap_content"-->
                            <!--android:layout_height="wrap_content"-->
                            <!--android:src="@drawable/shortcuts_icon_life_journey" />-->

                        <!--<TextView-->
                            <!--android:layout_width="wrap_content"-->
                            <!--android:layout_height="wrap_content"-->
                            <!--android:text="@string/index_shake"-->
                            <!--android:textColor="@color/black"-->
                            <!--android:textSize="@dimen/micro_text_size" />-->
                    <!--</LinearLayout>-->

                    <!--<LinearLayout-->

                        <!--android:layout_width="0dp"-->
                        <!--android:layout_height="wrap_content"-->
                        <!--android:layout_weight="1"-->
                        <!--android:gravity="center"-->
                        <!--android:orientation="vertical">-->

                        <!--<ImageButton-->
                            <!--android:id="@+id/index_collect_btn"-->
                            <!--android:layout_width="wrap_content"-->
                            <!--android:layout_height="wrap_content"-->
                            <!--android:src="@drawable/shortcuts_icon_collect" />-->

                        <!--<TextView-->
                            <!--android:layout_width="wrap_content"-->
                            <!--android:layout_height="wrap_content"-->
                            <!--android:text="@string/index_collect"-->
                            <!--android:textColor="@color/black"-->
                            <!--android:textSize="@dimen/micro_text_size" />-->
                    <!--</LinearLayout>-->
                <!--</LinearLayout>-->

                <!--<TextView-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:layout_gravity="center_horizontal"-->
                    <!--android:layout_marginBottom="15dp"-->
                    <!--android:layout_marginTop="15dp"-->
                    <!--android:drawableLeft="@drawable/home_slide_promotion"-->
                    <!--android:drawablePadding="10dp"-->
                    <!--android:text="@string/index_notify_info"-->
                    <!--android:textColor="@color/gray"-->
                    <!--android:textSize="@dimen/small_text_size" />-->

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/filter_spider_line" />

                <!--<ImageView-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:layout_gravity="center_horizontal"-->
                    <!--android:layout_marginBottom="10dp"-->
                    <!--android:layout_marginTop="10dp"-->
                    <!--android:background="@drawable/home_shopping_guang_icon" />-->

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="10dp"
                    android:drawableLeft="@drawable/home_shopping_icon"
                    android:drawablePadding="10dp"
                    android:text="@string/index_shopping_jinqiufengbao"
                    android:textColor="@color/black"
                    android:textSize="@dimen/micro_text_size" />

                <Gallery
                    android:id="@+id/index_jingqiu_gallery"
                    android:layout_width="match_parent"

                    android:layout_height="@dimen/index_gallery_height"
                    android:layout_marginBottom="15dp"
                    android:spacing="10dp" />

                <!--<TextView-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:layout_gravity="left"-->
                    <!--android:layout_marginBottom="10dp"-->
                    <!--android:layout_marginLeft="10dp"-->
                    <!--android:drawableLeft="@drawable/home_shopping_icon"-->
                    <!--android:drawablePadding="10dp"-->
                    <!--android:text="@string/index_shopping_remenyouhui"-->
                    <!--android:textColor="@color/black"-->
                    <!--android:textSize="@dimen/micro_text_size" />-->

                <Gallery
                    android:id="@+id/index_tehui_gallery"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/index_gallery_height"
                    android:layout_marginBottom="35dp"
                    android:spacing="10dp" />
            </LinearLayout>
        </LinearLayout>

    </FrameLayout>
</ScrollView>